[gd_scene load_steps=9 format=3 uid="uid://1gebq4go3yqh"]

[ext_resource type="Texture2D" uid="uid://k366ag4uvht" path="res://ui/level_select_ui/cliplock.png" id="1_b0egu"]
[ext_resource type="Script" uid="uid://c0l77rhqtdjec" path="res://ui/level_select_ui/level_slot.gd" id="1_qmpul"]
[ext_resource type="Texture2D" uid="uid://by43bsibwiydx" path="res://ui/level_select_ui/lock.png" id="2_b0egu"]
[ext_resource type="FontFile" uid="uid://cep3foox6k0yn" path="res://ui/fonts/fusion-pixel-12px-proportional-sc-latin-400-normal.woff2" id="5_151i6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_151i6"]
load_path = "res://.godot/imported/UI_sprite_sheet.png-14207ab6cdb38c0993803add240da942.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gfvrm"]
texture = SubResource("CompressedTexture2D_151i6")
texture_margin_left = 5.0
texture_margin_top = 7.0
texture_margin_right = 5.0
texture_margin_bottom = 7.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(155, 9, 26, 30)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qmpul"]
size = Vector2(1080, 1080)

[sub_resource type="LabelSettings" id="LabelSettings_8jadc"]
font = ExtResource("5_151i6")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="LevelSlot" type="Button"]
custom_minimum_size = Vector2(200, 250)
offset_top = 253.0
offset_right = 200.0
offset_bottom = 503.0
theme_override_styles/pressed = SubResource("StyleBoxTexture_gfvrm")
toggle_mode = true
script = ExtResource("1_qmpul")

[node name="ClipTextureRect" type="TextureRect" parent="."]
clip_children = 2
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_b0egu")
stretch_mode = 6

[node name="LevelPreviewTextureRect" type="TextureRect" parent="ClipTextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_qmpul")
expand_mode = 1
stretch_mode = 6

[node name="GreyColorRect" type="ColorRect" parent="ClipTextureRect/LevelPreviewTextureRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="LockedTextureRect" type="TextureRect" parent="ClipTextureRect/LevelPreviewTextureRect"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(124, 124)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -62.0
offset_right = 62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b0egu")

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2
text = "Mission #01"
label_settings = SubResource("LabelSettings_8jadc")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="toggled" from="." to="." method="_on_toggled"]
